1.Chang the can of platform driver to sja1000 style, 2.Differences are the can.clock.freq, ocr, cdr in struct priv. 3.Func register_sja1000dev is masked for next test. 4.Copy sja1000.h, rename sja1000.c can-xilinx-ps7.c to workspace. 5.Update .gitignore file for eclipse project files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@
 *.ko
 *.mod.c 
 *.mod.o 
-*.symvers 
-*.order 
+Modele.symvers 
+modules.order 
 *.tmp_versions 
 *.cmd
+# ignore files for eclipse project
+.cproject
+.project
+.settings/
+.tmp_versions/
