1.success setup can and transmit a msg to pc@500kbps 2.open can device will reset can so bittiming should setup again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 # ignore files for linux kernel module development
 *.o
 *.ko
-*.mod.c 
-*.mod.o 
-Modele.symvers 
-modules.order 
+
 *.tmp_versions 
 *.cmd
+
+*.mod.c 
+*.mod.o 
+
+*.order
+
+*.symvers 
 # ignore files for eclipse project
 .cproject
 .project
